2001-06-13  Oliver Kiddle  <opk@zsh.org>

	* 14896: Completion/Zsh/Type/_command_names: don't complete read-only
	parameters on the left side of an assignment

2001-06-13  Peter Stephenson  <pws@csr.com>

	* unposted: Completion/compinstall: pointed out by Bart:  bad
	array handling.

2001-06-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 14883 (Jos Backus): Completion/Unix/Command/_mount: add code for
	BSDish systems

2001-06-12  Clint Adams  <clint@zsh.org>

	* 14863: Src/Modules/tcp.c, Src/Modules/zftp.c:
	introduce tcp_connect.

2001-06-12  Peter Stephenson  <pws@csr.com>

	* 14858: Doc/Zsh/options.yo, Src/options.c, Src/subst.c,
	Src/zsh.h, Test/E01options.ztst: KSH_TYPESET option allows
	assignments after typeset not to be split.

2001-06-12  Bart Schaefer  <schaefer@zsh.org>

	* 14849: README: Request "reporter" output only if a bug cannot
	be reproduced with 'zsh -f'.

2001-06-11  Clint Adams  <clint@zsh.org>

	* 14843: Src/Modules/tcp.c, Src/Modules/zftp.c:
	introduce tcp_close and use it to close control fd.

2001-06-11  Sven Wischnowsky  <wischnow@zsh.org>

	* 14841: Completion/Base/Utility/_values, Src/Zle/computil.c:
	new word parsing for compvalues; this should now handle empty
	separators correctly, as far as it is possible

2001-06-11  Peter Stephenson  <pws@csr.com>

	* 14840: Doc/Zsh/options.yo: document search behaviour with
	PATH_DIRS option.

2001-06-10  Clint Adams  <clint@zsh.org>

	* 14830: config.guess, config.sub:
	upgrade to GNU's June 5 and 8 versions,
	respectively.

2001-06-09  Bart Schaefer  <schaefer@zsh.org>

	* unposted (see 14826): Test/C02cond.ztst: Force group of new
	directory created for file-mode tests to be owned by the current
	effective group.

	* 14827: Src/parse.c, Src/utils.c: Move zwcstat() to parse.c
	where it can be wrapped in #ifdef USE_MMAP.

	* 14824: Test/comptest: Avoid echotc (improvement on 14792).

2001-06-08  Clint Adams  <clint@zsh.org>

	* 14815: Src/utils.c: actually check the filename of
	the dump.
